Rewrite a good chunk of it
I went back to providing a renderer. For the time being, I want to make
2D games. If you want something else, knock yourself out.

This also shuffled a lot of the arguments around and exposed more stuff.

--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,15 @@
 category: Game Engine
 description: Gloop provides SDL2 game loops
+executables:
+  gloop-example:
+    dependencies:
+    - base
+    - gloop
+    - linear
+    - sdl2
+    - text
+    main: Example.hs
+    source-dirs: executables
 extra-source-files:
 - CHANGELOG.markdown
 - README.markdown
@@ -9,10 +19,7 @@ library:
   dependencies:
   - base
   - sdl2
-  - string-conv
   - text
-  other-modules:
-  - Gloop.Internal
   source-dirs: library
 license: MIT
 license-file: LICENSE.markdown
